src/app/components/jobdetails/view-jobdetails/viewjobdetailsmodel/viewjobdetailsmodel.component.css
/* ... */
.revamp__jd__description .icon__small__grid__section .box__container .experience { font-size: 10px; }
.revamp__jd__description .icon__small__grid__section h4 { margin:0; }
.revamp__jd__description .icon__small__grid__section .icon { right:auto; left:20px; width:25px; height:28px; background:url(../../../../../assets/images/view-job-sprites.png) -72px -83px no-repeat; }
.revamp__jd__description .icon__small__grid__section .icon.icon__domain { background-position: -105px -83px; width:29px; height:28px; }
.revamp__jd__description .icon__big__grid__container { width:100%; }
.revamp__jd__description .icon__big__grid__container .box__container { text-align:center; position:relative; border-radius: 3px; border:1px solid #e0e3ef; padding:20px; height:100%;  }
.revamp__jd__description .icon__big__grid__container .icon { position: relative; right:auto; top:auto; margin:0 auto 15px; background:url(../../../../../assets/images/view-job-sprites.png) 0 0 no-repeat; display:block; }
.revamp__jd__description .icon__big__grid__container h4 { margin:0; }
.revamp__jd__description .icon__big__grid__container .icon.icon__technical{ width:52px; height:52px; background-position:-291px -14px;}
.revamp__jd__description .icon__big__grid__container .icon.icon__education{ width:35px; height:50px; background-position:-356px -14px;}
.revamp__jd__description .icon__big__grid__container .icon.icon__person{ width:51px; height:51px; background-position:-401px -14px;}
.revamp__jd__description .icon__big__grid__container .icon.icon__manager{ width:37px; height:52px; background-position:-460px -14px;}
.revamp__jd__description .icon__big__grid__container .icon.icon__job { width:26px; height: 22px; background-position:-144px -80px; }
.revamp__jd__description .icon__big__grid__container .icon.icon__priority { width:26px; height: 26px; background-position:-176px -80px; }
.revamp__jd__description .icon__big__grid__container .icon.icon__date { width:25px; height: 22px; background-position:-212px -80px; }
.revamp__jd__description .icon__big__grid__container .icon.icon__duration { width:24px; height: 26px; background-position:-246px -79px; }

.jdv-listing .col-container { box-shadow:4px 4px 20px rgba(158,171,192,0.2); border-radius:12px; background:#fff; border:1px solid #eee; height:100%; overflow:hidden; }
.jdv-listing .job-leftcard{ margin:0 auto 30px; }
.jdv-listing .job-leftcard .top-container { border-bottom:1px solid #eee; padding:20px; }
.jdv-listing .job-leftcard .top-container p { margin:0; font-size:12px; color:#448afb; line-height:1.35; }
.jdv-listing .job-leftcard .top-container h6 { margin:0 0 5px;  font-size:11px; color:#9eabc0; line-height:1.15; }
.jdv-listing .job-leftcard .top-container .col-sm-6 { padding-left: 20px; }
.jdv-listing .job-leftcard .top-container .col-sm-6:last-child { text-align:right; }
.jdv-listing .job-leftcard .top-container .col-sm-6 i { position: absolute; left:0; top:0; color: #9eabc0; }
.jdv-listing .job-leftcard .top-container .col-sm-6:last-child i { right: 0; }
.jdv-listing .job-leftcard .top-container .col-sm-6:last-child { padding-left: 15px; padding-right: 20px; }
.jdv-listing .jdv-company-profile { padding:20px 0; width:360px; margin:0 auto; }
.jdv-listing .jdv-company-profile .company-logo { width:80px; height:80px; flex:0 0 80px; max-width:80px; display: flex; align-items: center; justify-content: center; box-shadow:0 0 5px rgba(0,0,0,0.15); padding:0; }
.jdv-listing .jdv-company-profile .company-logo img {  width:60px; height: auto; }
.jdv-listing .jdv-company-profile .company-title { padding:0 0 0 20px; }
.jdv-listing .jdv-company-profile .company-title h3 { font-size:16px; color:#9eabc0; margin:0; }
.jdv-listing .jdv-company-profile .company-title h2 { font-size:28px; color:#6e819e; font-weight:700; } 
.inline-icon-list ul { margin:0; padding:0 20px; list-style:none; font-size:0; text-align:center; }
.inline-icon-list li { font-size:14px; color:#9eabc0; font-weight:300; position:relative; display:inline-block; border-left:1px solid #eee; margin:0 0 0 10px; padding:0 0 0 10px; display:-webkit-box; display:-moz-box; display:-ms-flexbox; display:-webkit-flex; display:flex; -webkit-align-items:center; -moz-align-items:center; -ms-align-items:center; -ms-flex-align:center; align-items:center; }
.inline-icon-list li:first-child { margin:0; padding:0; border-left:0;  }
.inline-icon-list .jdv-icon { margin-right:10px; }

.jdv-icon { background:url(../../../../../assets/images/revamp__detail__view/jdv-sprites.png) 0 0 no-repeat; font-size:0; display:block;  } 
.jdv-icon-map { width:15px; height:18px; background-position:-9px -11px; }
.jdv-icon-work { width:22px; height:17px; background-position:-33px -11px; }
.jdv-icon-date { width:17px; height:17px; background-position:-63px -11px; }
.jdv-icon-ribbon { width:55px; height:55px; background-position:-201px -10px; margin: 0 auto; }
.jdv-icon-auth { width:55px; height:55px; background-position:-84px -10px; margin: 0 auto; }
.jdv-icon-status { width:55px; height:55px; background-position:-140px -10px;margin: 0 auto; }

.icon-listing { padding:0 20px; margin:20px 0; }
.icon-listing ul { text-align:center; margin:0; padding:0; list-style:none; }
.icon-listing li { display:inline-block; margin:0 0 0 15px;  }
.icon-listing li:first-child { margin:0; }
.icon-listing li .icon { width:49px; height:51px; background:url(../../../../../assets/images/revamp__detail__view/jdv-sprites.png) -84px -10px; display:block;  }
.icon-listing li h4 { font-size:12px; color:#6e819e; margin:0 0; }
.icon-listing .number  { width:49px; height:49px; display:block; font-size:30px; font-weight:700; color:#6e819e; line-height:52px; }

.job-leftcard .two-grid-icon { padding:40px 0; }
.job-leftcard .two-grid-icon .row { width:400px; margin:0 auto; display: flex; }
.job-leftcard .two-grid-icon .col-sm-6 { text-align:center; }
.job-leftcard .two-grid-icon .col-sm-6 h4 { font-size:14px; font-weight:700; margin:0; }
/* ... */

